# Copyright (C) 2022 The Qt Company Ltd.
# SPDX-License-Identifier: LicenseRef-Qt-Commercial OR BSD-3-Clause

add_subdirectory(cannon)
add_subdirectory(charactercontroller)
add_subdirectory(compoundshapes)
add_subdirectory(customshapes)
add_subdirectory(impeller)
add_subdirectory(material)
add_subdirectory(mass)
add_subdirectory(simple)
